# vaultwarden

./: Cargo.toml  PLANNING.md  TASK.md  compose.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/vw/: AliveInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/vw/: MainActivity.kt  ServerService.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/rust/: Cargo.toml
android/rust/src/: lib.rs
vw-data/: db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  rsa_key.pem
